# evm2near

./: .gitignore  AUTHORS  Cargo.toml  Makefile  README.md  compile-contract.py  index.html  push.py  setup.sh  test.py
.cargo/: config
.github/workflows/: cache.yml  makefile.yml  rust.yml  static.yml  test.yml
docs/: README.md  quick-intro.md
lib/abi-types/: Cargo.toml
lib/abi-types/src/: lib.rs
lib/evmlib/: .gitignore  Cargo.toml  Makefile
lib/evmlib/src/: api.rs  hash_provider.rs  lib.rs  near_runtime.rs  ops.rs  ops_test.rs  state.rs
lib/evmlib/src/env/: mock.rs  mod.rs
lib/evmlib/src/json_utils/: decode.rs  encode.rs
lib/evmlib/src/near_runtime/: mod.rs  storage.rs
lib/relooper/: .gitignore  BACKLOG.md  Cargo.toml  README.md  dfs.txt
lib/relooper/src/: cfg.rs  debug_view.rs  graph.rs  lib.rs  main.rs  re_graph.rs  reducability.rs  relooper.rs  traversal.rs
lib/relooper/test_data/: 1.txt  2.txt  compiled-from-sol.txt  dyn-edges.txt  solc-generated.txt  unreducible-moderate.txt  (+1 more)
lib/solidity-types/: Cargo.toml
test/: Collatz.sol  bench-mini.sol  bench.sol  bench_with_writing_in_memory.sol  bench_without_memory_allocation.sol  big-cfg-correctness.sol  big-cfg.sol  calc.sol  const.sol  echo.sol
tools/: apply-functions.py  bench.py  int-to-hex.clj  tests.py
tools/benchmark/: .gitignore  Cargo.toml
tools/benchmark/csvs/: c814a18.csv
tools/benchmark/inputs/: bench-mini.json  bench.json  bench_with_writing_in_memory.json  calc.json  const.json
tools/benchmark/pages/: index.html
tools/benchmark/src/: main.rs
tools/testbed/: Cargo.toml
(+29 files in other folders)
