[package]
name = "abi-types"
version = "0.1.0"
edition = "2021"
description = "Simple implementation of a data structure for https://docs.soliditylang.org/en/v0.8.16/types.html"
publish = false

[lib]
crate-type = ["lib"]

[dependencies]
ethabi = { version = "17", default-features = false }
nom = "7.1.1"
