[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
anyhow = "1.0.69"
csv = "1.2.0"
near-units = "0.2.0"
near-workspaces = "0.7.0"
rand = "0.8.5"
serde = "1.0.152"
serde_json = "1.0.93"
tokio = "1.25.0"
